use env to pass in webhook url

--- a/alertmanager/Dockerfile
+++ b/alertmanager/Dockerfile
@@ -1,3 +1,6 @@
 FROM prom/alertmanager
 
-ADD alertmanager.yml /etc/alertmanager/
+COPY alertmanager.yml /etc/alertmanager/
+
+ENTRYPOINT sed -i "s=WEBHOOK_URL=${WEBHOOK_URL}=g" /etc/alertmanager/alertmanager.yml && \
+    /bin/alertmanager --config.file=/etc/alertmanager/alertmanager.yml --storage.path=/alertmanager
